# data-validation-engine

./: .gitallowed  .gitignore  .mise.toml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTE.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  poetry.toml  pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/workflows/: ci_conda_publish.yml  ci_docs_build.yml  ci_docs_publish.yml  ci_linting.yml  ci_publish.yml  ci_pypi_publish.yml  ci_testing.yml  docs_publish.yml
docs/: README.md  faq.md  index.md
docs/advanced_guidance/: index.md  json_schemas.md
docs/advanced_guidance/code_docs/: core_engine.md
docs/advanced_guidance/json_schemas/contract/: contract.schema.json  error_details.schema.json
docs/advanced_guidance/json_schemas/contract/components/: base_entity.schema.json  field_error_type.schema.json  readable_entity.schema.json  type_name.schema.json  validation_function.schema.json
docs/advanced_guidance/json_schemas/transformations/components/: concrete_filter.schema.json  core_filter.schema.json  rule.schema.json
docs/advanced_guidance/package_documentation/: auditing.md  domain_types.md  feedback_messages.md  index.md  models.md  operations.md  pipeline.md  readers.md  refdata_loaders.md  refence_data_types.md
docs/assets/stylesheets/: extra.css
docs/detailed_guidance/: business_rules.md  data_contract.md  domain_types.md  feedback_messages.md
docs/json_schemas/: README.md  dataset.schema.json  jsonschemas.md  rule_store.schema.json
docs/json_schemas/contract/components/: contact_error_details.schema.json  entity.schema.json  field.schema.json  field_error_detail.schema.json  field_specification.schema.json
docs/json_schemas/transformations/: transformations.schema.json
docs/json_schemas/transformations/components/: business_filter.schema.json  business_rule.schema.json  filter.schema.json  multiple_expressions.schema.json
docs/user_guidance/: auditing.md  business_rules.md  data_contract.md  domain_types.md  error_reports.md  feedback_messages.md  file_transformation.md  getting_started.md  install.md
docs/user_guidance/implementations/: duckdb.md  mixing_implementations.md  spark.md
docs/user_guidance/implementations/platform_specific/: databricks.md  palantir_foundry.md
docs/user_guidance/pipelines/: palantir_foundry_pipeline.md
includes/: jargon_and_acronyms.md
pylint_checkers/: check_typing_imports.py
scripts/git-secrets/: README.md  install-edgecases.sh  install-linux.sh  pre-commit.sh
src/dve/common/: error_utils.py
src/dve/core_engine/: constants.py  engine.py  exceptions.py  loggers.py  message.py  models.py  templating.py  type_hints.py  validation.py
src/dve/core_engine/backends/: __init__.py  exceptions.py  types.py  utilities.py
src/dve/core_engine/backends/base/: __init__.py  auditing.py  backend.py  contract.py  core.py  reader.py  reference_data.py  rules.py  utilities.py
src/dve/core_engine/backends/implementations/: __init__.py
src/dve/core_engine/backends/metadata/: __init__.py  contract.py  reporting.py  rules.py
src/dve/core_engine/backends/readers/: __init__.py  csv.py  utilities.py  xml.py  xml_linting.py
src/dve/core_engine/configuration/: __init__.py  base.py
src/dve/core_engine/configuration/v1/: __init__.py  filters.py  steps.py
src/dve/core_engine/functions/: implementations.py
src/dve/metadata_parser/: __init__.py  domain_types.py  exc.py  function_library.py  function_wrapper.py  model_generator.py  models.py  utilities.py
src/dve/parser/: exceptions.py  type_hints.py  utilities.py
src/dve/parser/file_handling/: helpers.py  log_handler.py  service.py  utilities.py
src/dve/parser/file_handling/implementations/: base.py  file.py  s3.py
src/dve/pipeline/: duckdb_pipeline.py  foundry_ddb_pipeline.py  pipeline.py  spark_pipeline.py  utils.py  xml_linting.py
src/dve/reporting/: __init__.py  constants.py  error_report.py  excel_report.py  utils.py
tests/: conftest.py  fixtures.py
tests/features/: animals.feature  books.feature  demographics.feature  environment.py  movies.feature  patches.py  planets.feature
tests/features/steps/: context_tools.py  steps_audit.py  steps_pipeline.py  steps_post_pipeline.py  utilities.py
tests/test_core_engine/: test_debug.py  test_engine.py  test_message.py  test_models.py  test_register_udfs.py  test_s3_outputs.py  test_spark_helpers.py
tests/test_core_engine/test_backends/: fixtures.py  test_utilities.py
tests/test_core_engine/test_backends/test_readers/: test_csv.py  test_ddb_csv.py  test_ddb_json.py  test_ddb_xml.py  test_spark_json.py  test_utilities.py
tests/test_error_reporting/: test_excel_report.py  test_utils.py
tests/test_model_generation/: test_domain_types.py  test_exceptions.py  test_model_generation.py  test_validator_generation.py
tests/test_parser/: test_file_handling.py
tests/test_pipeline/: pipeline_helpers.py  test_duckdb_pipeline.py  test_foundry_ddb_pipeline.py  test_pipeline.py  test_spark_pipeline.py
tests/test_reporting/: test_error_utils.py  test_excel_report.py  test_utils.py
tests/testdata/animals/: animals.dischema.json  animals.xml  animals_mixture.xml
tests/testdata/books/: books.xml  books_xsd_fail.xml  malformed_books.xml  nested_books.XML  nested_books.dischema.json  nested_books.xsd  nested_books_ddb.dischema.json
tests/testdata/demographics/: README.md  basic_demographics.csv  basic_demographics.dischema.json  basic_demographics_ddb.dischema.json
tests/testdata/movies/: good_movies.json  movies.dischema.json  movies.json  movies_contract_error_details.json  movies_ddb.dischema.json  movies_ddb_rule_store.json  movies_spark_rule_store.json
tests/testdata/movies/refdata/: movies_sequels.arrow  movies_sequels.parquet
tests/testdata/planets/: error_codes.json  malformed_planets.csv  milky_way_planets.metadata.json  planet_ruleset.json  planets.dischema.json  planets_add_fields.csv  planets_ddb.dischema.json  planets_demo.csv  planets_demo.metadata.json  planets_no_extension  satellites_demo.csv  satellites_demo_short.csv
(+46 files in other folders)
